--- a/app/iot/templates/base.html
+++ b/app/iot/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Flood Tracker Subscription</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 <section class="content">
   <header>
     {% block header %}{% endblock %}
@@ -9,6 +10,9 @@
     <div class="flash">{{ message }}</div>
   {% endfor %}
   {% block content %}{% endblock %}
+  <footer>
+    <a href="http://www.codeformiami.com">Code For Miami</a>
+  </footer>
 </section>
 <script async defer
 src="{{ url_for('static', filename='app.js') }}">
