--- a/app/iot/templates/base.html
+++ b/app/iot/templates/base.html
@@ -11,7 +11,7 @@
   {% endfor %}
   {% block content %}{% endblock %}
   <footer>
-    <a href="http://www.codeformiami.com">Code For Miami</a>
+    <a href="http://www.codeformiami.org">Code For Miami</a>
   </footer>
 </section>
 <script async defer
