--- a/app/iot/templates/index.html
+++ b/app/iot/templates/index.html
@@ -16,7 +16,7 @@
       <span class="form-title">Subscribe to Flood Alerts Near You</span>
       <div class="form-group">
         {{form.phone_number.label}}<br>
-        {{form.phone_number(pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}")}}
+        {{form.phone_number(pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}", placeholder="123-456-7890", oninput="setCustomValidity('')", title="Valid US phone number including area code. Example: 123-456-7890")}}
       </div>
       <div class="form-group">
           {{form.device.label}}<br>
@@ -52,5 +52,4 @@
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnqGvxGX0guwpSNA_SSk4DfIVJ9okqowg&callback=initMap">
 </script>
-<script async defer src="https://cdnjs.cloudflare.com/ajax/libs/libphonenumber-js/1.7.8/libphonenumber-js.min.js"></script>
 {% endblock %}
