links + title change

--- a/app/iot/templates/base.html
+++ b/app/iot/templates/base.html
@@ -10,6 +10,7 @@
       <a href="#">about</a>
       <a href="#">locations</a>
       <a href="#">contact</a>
+      <a href="/readings/1" id='readings'>Latest Readings</a>
     </nav>
   </header>
   {% for message in get_flashed_messages() %}
