--- a/app/iot/templates/readings.html
+++ b/app/iot/templates/readings.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 <div class="container">
+    <h2>{{ device.name }} Tracker</h2>
     <div class="section">
       <canvas id="myChart"></canvas>
       <button id='minutes'>Minutes</button>
