--- a/app/iot/static/style.css
+++ b/app/iot/static/style.css
@@ -63,7 +63,6 @@ body{
 }
 
 .form-title{
-    font-size: 20px;
     font-weight: bold; 
     color: darkblue;
 }
@@ -76,6 +75,9 @@ body{
   }
   .description{
       font-size: 20px;
+  }
+  #readings{
+      font-weight: 800;
   }
 
   .column1{
