fixing design a little more, readding form

--- a/app/iot/static/style.css
+++ b/app/iot/static/style.css
@@ -54,17 +54,16 @@ body{
     height: 500px;
   }
 .form{
-    background-color: lightcoral;
+    background-color: white;
     padding: 20px;
     margin: auto;
-    border: 3px solid;
     text-align: left;
     display: flex;
 }
 
 .form-title{
     font-weight: bold; 
-    color: darkblue;
+    color: red;
 }
   li {
     list-style-type: none;
