--- a/app/iot/templates/index.html
+++ b/app/iot/templates/index.html
@@ -6,7 +6,7 @@
         <div id="map"></div>
     </div>
     <span class="description">The Code For Miami Flood Tracking project has monitoring devices listed above. You can elect to get notified by a phone call, sms message, or both when our trackers detect a flood.</span>
-  <!-- <div class="section form">
+  <div class="section form">
     <form action="/subscribe" method="post" class="column2">
       <span class="form-title">Subscribe to Flood Alerts Near You</span>
       <div class="form-group">
@@ -39,7 +39,7 @@
         {{form.submit()}}
       </div>
       </form>
-  </div> -->
+  </div>
 </div>
 {% endblock %}
 
